Prevent the status indicator flickering for quick returns

--- a/src/app/common/icons/icons.less
+++ b/src/app/common/icons/icons.less
@@ -48,10 +48,21 @@
     }
 }
 
+/* 
+The following accounts for a debounce in the status indicator. We will only display the status indicator icon if the parent indicates that it should be visible AND one of the following is true:
+1. There is a status to be shown.
+2. There is a spinner to be shown and the required delay has passed.
+*/
 .status-indicator-visible {
-    .positional-icon-visible;
+    &.spinner-visible,
+    &.output,
+    &.error,
+    &.success {
+        .positional-icon-visible;
+    }
 
-    &.spin.spinner-visible {
+    // This is set by the timeout in the status indicator component.
+    &.spinner-visible {
         #spinner {
             visibility: visible;
         }
